--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 test.php
 0.0.1_awp-custom-product-tabs-for-woocommerce.php
 woocommerce-settings-tab-demo.php
+awp-custom-product-tabs-for-woocommerce.php
