--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ test.php
 0.0.1_awp-custom-product-tabs-for-woocommerce.php
 woocommerce-settings-tab-demo.php
 awp-custom-product-tabs-for-woocommerce.php
+almond-thumbnail-80px.png
